--- a/css/debug.css
+++ b/css/debug.css
@@ -4,9 +4,11 @@
 -------------------------------------------------------- 
 
 */
+
 html {
     background: lime;
 }
+
 body {
     background: beige;
 }
@@ -23,14 +25,20 @@ header#top {
     border: 4px dotted red;
 }
 
-div#content {
+#container {
+    background: orange;
+}
+
+#content {
     background: darksalmon;
 }
 
-article {
-    background: antiquewhite;
+#source #content {
+    border: 1px solid red;
 }
-
+#source #container {
+    background: orange;
+}
 figure {
     background: firebrick;
 }
@@ -38,9 +46,11 @@ figure {
 footer.signature {
     background: moccasin;
 }
+
 .signature figure {
     border: 1px solid red;
 }
+
 .signature p {
     border: 1px solid green;
 }
